array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var l=Array();
  
  return length(l);
  
  var first = num[0] ;
  for (k<- 1 to size(num)){
    if num[k]==num[0]{
      
    }
  }  
}